<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3389CD"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height= "wrap_content"
        android:gravity="center|top"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#3ED6EA"
                android:fontFamily="sans-serif-black"
                android:text="@string/my_score"
                android:textColor="#004D40" />

            <TextView
                android:id="@+id/cValScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/_0"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/uScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#3ED6EA"
                android:fontFamily="sans-serif-black"
                android:text="@string/your_score"
                android:textColor="#004D40" />

            <TextView
                android:id="@+id/uValScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/_0"
                android:textColor="#000000" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imaComputer"
            android:layout_width="195dp"
            android:layout_height="163dp"
            android:contentDescription="@string/imacompu"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvWinner"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/touch_me_to_reset_scores"
            android:textColor="#263238"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imaUser"
            android:layout_width="195dp"
            android:layout_height="163dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/papelito"
            tools:srcCompat="@tools:sample/avatars" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <LinearLayout
            android:id="@+id/linearLayoutHoriz"
            android:layout_width="match_parent"
            android:layout_height="105dp"
            android:background="#3ED6EA"
            android:gravity="center|top"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imaPiedra"
                android:layout_width="110dp"
                android:layout_height="104dp"
                android:layout_marginBottom="60dp"
                android:contentDescription="@string/piedra"
                android:src="@drawable/piedra"
                tools:ignore="SpeakableTextPresentCheck"
                tools:srcCompat="@drawable/piedra" />

            <ImageButton
                android:id="@+id/imaPaper"
                android:layout_width="110dp"
                android:layout_height="104dp"
                android:layout_marginBottom="60dp"
                android:contentDescription="@string/papel"
                android:src="@drawable/papel"
                tools:ignore="SpeakableTextPresentCheck"
                tools:srcCompat="@drawable/papel" />

            <ImageButton
                android:id="@+id/imaScissors"
                android:layout_width="110dp"
                android:layout_height="104dp"
                android:layout_marginBottom="60dp"
                android:contentDescription="@string/tijeras"
                android:scaleType="center"
                app:srcCompat="@drawable/tijeras"
                tools:ignore="SpeakableTextPresentCheck" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:adSize="BANNER"
            app:adUnitId="ca-app-pub-5883565689761276/3668018743">

        </com.google.android.gms.ads.AdView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>